# Agents

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
src/agents/: graph.py  state.py
src/agents/nodes/: compressor.py  nodes.py  query_processor.py  reranker.py
src/agents/rag/: embeddings.py  retrievers.py  vector_store.py
src/infra/llm/: base.py  openai_adapter.py
src/infra/tools/: google_trends.py  search.py  speech_to_text.py  youtube_link.py
src/infra/tools/gooble_tools/: goobe_tools.py
tests/: arquivo_filtrado.json  cardiologia_rag.jsonl  chunks_extraction.py  chunks_imagens_para_rag.json  chunks_para_rag.json  chunks_visualization.py  data.py  diretriz_limpa.txt  image_to_chunk.py  ingest.py  tables_llm_extractor.py  test.py
